[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/game/Creature.gd" type="Script" id=1]

[node name="Creature" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="LeftWallDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.6 )
enabled = true
cast_to = Vector3( 1, 0, 0.5 )
collision_mask = 3

[node name="CenterWallDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.6 )
enabled = true
cast_to = Vector3( 0, 0, 0.6 )
collision_mask = 3

[node name="RightWallDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.6 )
enabled = true
cast_to = Vector3( -1, 0, 0.5 )
collision_mask = 3
